syntax = "proto3";

package average;

message ComputeAverageRequest {
	int32 number = 1;
}

message ComputeAverageResponse {
	double result = 1;
}

service ComputeAverageService {
	rpc ComputeAverage (stream ComputeAverageRequest) returns (ComputeAverageResponse) {}
}