syntax = "proto3";

package maximum;

message FindMaximumRequest {
	int32 number = 1;
}

message FindMaximumResponse {
	int32 result = 1;
}

service FindMaximumService {
	rpc FindMaximum (stream FindMaximumRequest) returns (stream FindMaximumResponse) {}
}